<?xml version="1.0" encoding="utf-8"?>
<resources>
	
	<string name="const_string_preferences">PANDROID_EVENT_VIEWER_PREFERENCES</string>
	<string name="app_name">Pandora FMS Android Console</string>
	
	<string name="options_label_str">Options</string>
	<string name="help_label_str">Help</string>
	<string name="refresh_label_str">Refresh</string>
	<string name="exit_label_str">Exit</string>
	<string name="pandorafms_logo_description">PandoraFMS\'s logo</string>
	<string name="dont_show_again">Don\'t show again</string>
	<string name="pandroid_info_txt">Need a large string for to fill this space with pretty things and rainbows.</string>
	<string name="pandroid_info_long_txt">Need a large string for to fill this space with pretty things and rainbows.</string>
	<string name="pandroid_options_txt">Need a large string for to fill this space with pretty things and rainbows.</string>
	<string name="url_option">URL:</string>
	<string name="user_option">User:</string>
	<string name="password_option">Password:</string>
	<string name="save_button_str">Save</string>
	<string name="update_button_str">Update</string>
	<string name="cancel_button_str">Cancel</string>
	<string name="connection_str">Connecting&#8230;</string>
	<string name="loading_desc">Connecting&#8230;</string>
	
</resources>