<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="10dip"
	android:gravity="center" >
	
	<ImageView
		android:layout_weight="0"
		android:contentDescription="@string/pandorafms_logo_description"
		android:id="@+id/img_logo_about"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:padding="5dp"
		android:src="@drawable/pandorafms_logo" />
	
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/pandroid_info_txt" />
	
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/pandroid_info_long_txt"
		android:gravity="center_horizontal" />
	
	<TextView
		android:id="@+id/url_pandora"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal" />
	
</LinearLayout>